fix: fix scrollbar in css

--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -27,9 +27,6 @@ a:visited {
 
 html {
   font-size: 62.5%;
-  ::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 main {
